fix: project review authors